--- a/pom.xml
+++ b/pom.xml
@@ -53,12 +53,12 @@ Joda (http://joda-time.sourceforge.net/) data types.
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>${project.version}</version>
+      <version>2.0.0-RC2</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>${project.version}</version>
+      <version>2.0.0-RC2</version>
     </dependency>
 
     <!-- And obviously also depends on Joda lib -->
