--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>com.fasterxml.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson-datatype-JODA</name>
-  <version>2.0.0-RC2-SNAPSHOT</version>
+  <version>2.0.0-RC2</version>
   <packaging>bundle</packaging>
   <description>Add-on module for Jackson (http://jackson.codehaus.org) to support
 Joda (http://joda-time.sourceforge.net/) data types.
@@ -152,7 +152,12 @@ Joda (http://joda-time.sourceforge.net/) data types.
               <Bundle-Vendor>fasterml.com</Bundle-Vendor>
               <Import-Package>
 com.fasterxml.jackson.core
+,com.fasterxml.jackson.core.util
 ,com.fasterxml.jackson.databind
+,com.fasterxml.jackson.databind.deser.std
+,com.fasterxml.jackson.databind.module
+,com.fasterxml.jackson.databind.node
+,com.fasterxml.jackson.databind.ser.std
 ,org.joda.time
 ,org.joda.time.format
 </Import-Package>
