--- a/pom.xml
+++ b/pom.xml
@@ -53,12 +53,12 @@ Joda (http://joda-time.sourceforge.net/) data types.
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>2.0.0-RC3</version>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.0.0-RC3</version>
+      <version>2.0.0</version>
     </dependency>
 
     <!-- And obviously also depends on Joda lib -->
@@ -119,14 +119,14 @@ Joda (http://joda-time.sourceforge.net/) data types.
         <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.6.1</version>
+                <version>2.8.1</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
                     <encoding>UTF-8</encoding>
                     <maxmemory>512m</maxmemory>
                     <links>
-                        <link>http://java.sun.com/javase/6/docs/api/</link>
+                      <link>http://docs.oracle.com/javase/6/docs/api/</link>
                     </links>
                 </configuration>
                 <executions>
