--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,30 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+ |  Copyright 2012 FasterXML.com
+ |
+ |  Licensed under the Apache License, Version 2.0 (the "License");
+ |  you may not use this file except in compliance with the License.
+ |  You may obtain a copy of the License at
+ |
+ |  http://www.apache.org/licenses/LICENSE-2.0
+ |
+ |  Unless required by applicable law or agreed to in writing, software
+ |  distributed under the License is distributed on an "AS IS" BASIS,
+ |  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ |  See the License for the specific language governing permissions and
+ |  limitations under the License.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion> 
   <parent>
-    <groupId>org.sonatype.oss</groupId>
+    <groupId>com.fasterxml</groupId>
     <artifactId>oss-parent</artifactId>
-    <version>7</version>
+    <version>2</version>
   </parent>
   <groupId>com.fasterxml.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson-datatype-JODA</name>
   <version>2.0.3-SNAPSHOT</version>
-  <packaging>jar</packaging>
   <description>Add-on module for Jackson (http://jackson.codehaus.org) to support
 Joda (http://joda-time.sourceforge.net/) data types.
   </description>
@@ -19,37 +34,25 @@ Joda (http://joda-time.sourceforge.net/) data types.
     <developerConnection>scm:git:git@github.com:FasterXML/jackson-datatype-joda.git</developerConnection>
     <url>http://github.com/FasterXML/jackson-datatype-joda</url>    
   </scm>
-  <developers>
-        <developer>
-            <id>tatu</id>
-            <name>Tatu Saloranta</name>
-            <email>tatu@fasterxml.com</email>
-        </developer>
-  </developers>
-
-  <prerequisites>
-    <maven>2.2.1</maven>
-  </prerequisites>
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- Configuration properties for the OSGi maven-bundle-plugin -->
+    <osgi.import>com.fasterxml.jackson.core
+,com.fasterxml.jackson.core.util
+,com.fasterxml.jackson.databind
+,com.fasterxml.jackson.databind.deser.std
+,com.fasterxml.jackson.databind.jsontype
+,com.fasterxml.jackson.databind.module
+,com.fasterxml.jackson.databind.node
+,com.fasterxml.jackson.databind.ser.std
+,org.joda.time
+,org.joda.time.format
+    </osgi.import>
+    <osgi.export>com.fasterxml.jackson.datatype.joda.*;version=${project.version}
+</osgi.export>
   </properties>
 
-  <!-- Licensing -->
-  <licenses>
-    <license>
-      <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-  <organization>
-    <name>fasterxml.com</name>
-    <url>http://fasterxml.com</url>
-  </organization>
-
   <dependencies>
-    <!-- Extends Jackson mapper, 2.x
-      -->
+    <!-- Extends Jackson mapper, 2.x -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
@@ -68,8 +71,7 @@ Joda (http://joda-time.sourceforge.net/) data types.
         <version>1.6</version>
     </dependency>
 
-     <!--  Test Dependencies -->
-
+    <!--  Test Dependencies -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -79,57 +81,15 @@ Joda (http://joda-time.sourceforge.net/) data types.
   </dependencies>
 
   <build>
-    <resources>
+    <resources><!-- make sure our VERSION.txt gets filtered, copied -->
       <resource>
         <directory>src/main/resources</directory>
         <filtering>true</filtering>
       </resource>  
     </resources>
     <plugins>
-      <plugin>
-        <!-- Let's require JDK 1.6 -->
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-release-plugin</artifactId>
-            <version>2.1</version>
-            <configuration>
-                <mavenExecutorId>forked-path</mavenExecutorId>
-            </configuration>
-        </plugin>
-        
-        <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8.1</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <encoding>UTF-8</encoding>
-                    <maxmemory>512m</maxmemory>
-                    <links>
-                      <link>http://docs.oracle.com/javase/6/docs/api/</link>
-                    </links>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-        </plugin>
-
-        <!-- Plus, let's make jars OSGi bundles as well  -->
-        <!--plugin>
+  <!-- need to override bundle name, for 2.0.x compatibility; remove in 2.1 -->
+     <plugin>
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-bundle-plugin</artifactId>
           <version>2.3.7</version>
@@ -137,58 +97,9 @@ Joda (http://joda-time.sourceforge.net/) data types.
           <configuration>
             <instructions>
               <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-              <Bundle-Vendor>fasterml.com</Bundle-Vendor>
-              <Import-Package>
-com.fasterxml.jackson.core
-,com.fasterxml.jackson.core.util
-,com.fasterxml.jackson.databind
-,com.fasterxml.jackson.databind.deser.std
-,com.fasterxml.jackson.databind.module
-,com.fasterxml.jackson.databind.node
-,com.fasterxml.jackson.databind.ser.std
-,org.joda.time
-,org.joda.time.format
-</Import-Package>
-              <Private-Package>
-</Private-Package>
-              <Export-Package>
-com.fasterxml.jackson.datatype.joda
-,com.fasterxml.jackson.datatype.joda.deser
-,com.fasterxml.jackson.datatype.joda.ser
-</Export-Package>
             </instructions>
           </configuration>
-        </plugin-->
+     </plugin>
     </plugins>
   </build>
-  <profiles>
-        <profile>
-            <id>release-sign-artifacts</id>
-            <activation>
-                <property>
-                    <name>performRelease</name>
-                    <value>true</value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.1</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-  </profiles>
-  <!-- NOTE: repositories from parent POM -->
 </project>
