--- a/pom.xml
+++ b/pom.xml
@@ -56,12 +56,12 @@ Joda (http://joda-time.sourceforge.net/) data types.
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>2.0.2</version>
+      <version>2.0.4</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.0.2</version>
+      <version>2.0.4</version>
     </dependency>
 
     <!-- And obviously also depends on Joda lib -->
@@ -70,11 +70,14 @@ Joda (http://joda-time.sourceforge.net/) data types.
         <artifactId>joda-time</artifactId>
         <version>2.1</version>
     </dependency>
+<!-- 26-Jun-2012, tatu: Not sure if this should be included; it appears to be
+   a transitive dependency. Leaving out for now.
     <dependency>
         <groupId>org.joda</groupId>
         <artifactId>joda-convert</artifactId>
         <version>1.2</version>
     </dependency>
+-->
 
     <!--  Test Dependencies -->
     <dependency>
