--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <groupId>com.fasterxml.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson-datatype-JODA</name>
-  <version>2.0.4</version>
+  <version>2.0.5-SNAPSHOT</version>
   <description>Add-on module for Jackson (http://jackson.codehaus.org) to support
 Joda (http://joda-time.sourceforge.net/) data types.
   </description>
