--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>com.fasterxml.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson-datatype-JODA</name>
-  <version>2.2.1</version>
+  <version>2.2.2-SNAPSHOT</version>
   <description>Add-on module for Jackson (http://jackson.codehaus.org) to support
 Joda (http://joda-time.sourceforge.net/) data types.
   </description>
@@ -18,7 +18,7 @@ Joda (http://joda-time.sourceforge.net/) data types.
     <connection>scm:git:git@github.com:FasterXML/jackson-datatype-joda.git</connection>
     <developerConnection>scm:git:git@github.com:FasterXML/jackson-datatype-joda.git</developerConnection>
     <url>http://github.com/FasterXML/jackson-datatype-joda</url>    
-    <tag>jackson-datatype-joda-2.2.1</tag>
+    <tag>HEAD</tag>
   </scm>
   <properties>
     <version.jackson>2.2.1</version.jackson>
