--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,10 @@ Joda (http://joda-time.sourceforge.net/) data types.
     <tag>HEAD</tag>
   </scm>
   <properties>
-    <version.jackson>2.2.1</version.jackson>
+    <version.jackson>2.2.2</version.jackson>
     <!-- Generate PackageVersion.java into this directory. -->
     <packageVersion.dir>com/fasterxml/jackson/datatype/joda</packageVersion.dir>
-    <packageVersion.package>com.fasterxml.jackson.datatype.joda</packageVersion.package>
+    <packageVersion.package>${project.groupId}.joda</packageVersion.package>
 
     <!-- Configuration properties for the OSGi maven-bundle-plugin -->
     <osgi.import>com.fasterxml.jackson.core
@@ -38,7 +38,7 @@ Joda (http://joda-time.sourceforge.net/) data types.
 ,org.joda.time
 ,org.joda.time.format
     </osgi.import>
-    <osgi.export>com.fasterxml.jackson.datatype.joda.*;version=${project.version}
+    <osgi.export>${project.groupId}.joda.*;version=${project.version}
 </osgi.export>
   </properties>
 
