--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion> 
   <parent>
-    <groupId>com.fasterxml</groupId>
-    <artifactId>oss-parent</artifactId>
-    <version>12</version>
+    <groupId>com.fasterxml.jackson</groupId>
+    <artifactId>jackson-parent</artifactId>
+    <version>2.4</version>
   </parent>
   <groupId>com.fasterxml.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson-datatype-Joda</name>
-  <version>2.3.3-SNAPSHOT</version>
+  <version>2.4.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Add-on module for Jackson (http://jackson.codehaus.org) to support
 Joda (http://joda-time.sourceforge.net/) data types.
@@ -22,8 +22,8 @@ Joda (http://joda-time.sourceforge.net/) data types.
     <tag>HEAD</tag>
   </scm>
   <properties>
-    <version.jackson.annotations>2.3.0</version.jackson.annotations>
-    <version.jackson.core>2.3.2</version.jackson.core>
+    <version.jackson.annotations>2.4.0-SNAPSHOT</version.jackson.annotations>
+    <version.jackson.core>2.4.0-SNAPSHOT</version.jackson.core>
     <!-- Generate PackageVersion.java into this directory. -->
     <packageVersion.dir>com/fasterxml/jackson/datatype/joda</packageVersion.dir>
     <packageVersion.package>${project.groupId}.joda</packageVersion.package>
@@ -71,7 +71,9 @@ Joda (http://joda-time.sourceforge.net/) data types.
     <dependency>
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
-        <version>2.1</version>
+        <!-- Upgraded to 2.2 for Jackson 2.4: but let's try not to call any 2.2 methods
+          -->
+        <version>2.2</version>
     </dependency>
 <!-- 26-Jun-2012, tatu: Not sure if this should be included; it appears to be
    a transitive dependency. Leaving out for now.
@@ -82,13 +84,6 @@ Joda (http://joda-time.sourceforge.net/) data types.
     </dependency>
 -->
 
-    <!--  Test Dependencies -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.8.2</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 
   <build>
