--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>com.fasterxml.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson-datatype-Joda</name>
-  <version>2.4.0-rc4-SNAPSHOT</version>
+  <version>2.4.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Add-on module for Jackson (http://jackson.codehaus.org) to support
 Joda (http://joda-time.sourceforge.net/) data types.
@@ -22,8 +22,8 @@ Joda (http://joda-time.sourceforge.net/) data types.
     <tag>HEAD</tag>
   </scm>
   <properties>
-    <version.jackson.annotations>2.4.0-rc3</version.jackson.annotations>
-    <version.jackson.core>2.4.0-rc3</version.jackson.core>
+    <version.jackson.annotations>2.4.0</version.jackson.annotations>
+    <version.jackson.core>2.4.0</version.jackson.core>
     <!-- Generate PackageVersion.java into this directory. -->
     <packageVersion.dir>com/fasterxml/jackson/datatype/joda</packageVersion.dir>
     <packageVersion.package>${project.groupId}.joda</packageVersion.package>
@@ -48,7 +48,7 @@ Joda (http://joda-time.sourceforge.net/) data types.
   </properties>
 
   <dependencies>
-    <!-- Extends Jackson mapper, 2.x; but also needs annotations slightly,
+    <!-- Extends Jackson mapper; but also needs annotations slightly,
          to support JsonFormat
       -->
     <dependency>
