--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>com.fasterxml.jackson</groupId>
     <artifactId>jackson-parent</artifactId>
-    <version>2.6.1</version>
+    <version>2.7.0-rc1</version>
   </parent>
   <groupId>com.fasterxml.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson-datatype-Joda</name>
-  <version>2.6.4-SNAPSHOT</version>
+  <version>2.7.0-rc1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Add-on module for Jackson (http://jackson.codehaus.org) to support
 Joda (http://joda-time.sourceforge.net/) data types.
@@ -22,8 +22,8 @@ Joda (http://joda-time.sourceforge.net/) data types.
     <tag>HEAD</tag>
   </scm>
   <properties>
-    <version.jackson.annotations>2.6.0</version.jackson.annotations>
-    <version.jackson.core>2.6.3</version.jackson.core>
+    <version.jackson.annotations>2.7.0-rc1</version.jackson.annotations>
+    <version.jackson.core>2.7.0-rc1</version.jackson.core>
     <!-- Generate PackageVersion.java into this directory. -->
     <packageVersion.dir>com/fasterxml/jackson/datatype/joda</packageVersion.dir>
     <packageVersion.package>${project.groupId}.joda</packageVersion.package>
@@ -58,17 +58,10 @@ Joda (http://joda-time.sourceforge.net/) data types.
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
         <!-- Upgraded to 2.2 for Jackson 2.4: but let's try not to call any 2.2 methods
+             Similarly 2.4 for Jackson 2.7
           -->
-        <version>2.2</version>
+        <version>2.4</version>
     </dependency>
-<!-- 26-Jun-2012, tatu: Not sure if this should be included; it appears to be
-   a transitive dependency. Leaving out for now.
-    <dependency>
-        <groupId>org.joda</groupId>
-        <artifactId>joda-convert</artifactId>
-        <version>1.2</version>
-    </dependency>
--->
 
   </dependencies>
 
