--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion> 
   <parent>
     <groupId>com.fasterxml.jackson</groupId>
-    <artifactId>jackson-parent</artifactId>
+    <artifactId>jackson-bom</artifactId>
     <version>2.9.0.pr1</version>
   </parent>
   <groupId>com.fasterxml.jackson.datatype</groupId>
