--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: java
 
 jdk:
-  - oraclejdk7
+  - openjdk7
+  - openjdk8
+
+# no need to build all branches
+branches:
+  only:
+    - master
+    - "2.8"
