add repository info for snapshot parents

--- a/pom.xml
+++ b/pom.xml
@@ -82,4 +82,16 @@ Joda (http://joda-time.sourceforge.net/) data types.
       </plugin>
     </plugins>
   </build>
+
+  <!-- Alas, need to include snapshot reference since otherwise can not find
+       snapshot of parent... -->
+  <repositories>
+    <repository>
+      <id>sonatype-nexus-snapshots</id>
+      <name>Sonatype Nexus Snapshots</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <releases><enabled>false</enabled></releases>
+      <snapshots><enabled>true</enabled></snapshots>
+    </repository>
+  </repositories>
 </project>
