--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@ Joda (http://joda-time.sourceforge.net/) data types.
           -->
         <version>2.9.9</version>
     </dependency>
+    <dependency>
+      <groupId>org.joda</groupId>
+      <artifactId>joda-money</artifactId>
+      <version>1.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
