Manual merge of #129 to master (3.0)

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,10 @@ Joda (https://www.joda.org/joda-time/) data types.
         <groupId>org.moditect</groupId>
         <artifactId>moditect-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>de.jjohannes</groupId>
+        <artifactId>gradle-module-metadata-maven-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 
