Refactor CI, remove "os" from matrix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,12 @@ on:
     - "release-notes/*"
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: 'ubuntu-20.04'
     strategy:
       fail-fast: false
       matrix:
         java_version: ['8', '11', '17', '21']
         joda_version: ['2.9', '2.10.14', '2.12.7']
-        os: ['ubuntu-20.04']
     env:
       JAVA_OPTS: "-XX:+TieredCompilation -XX:TieredStopAtLevel=1"
     steps:
