try to fix matching in CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,11 @@ jobs:
       fail-fast: false
       matrix:
         java_version: ['8', '17', '21']
-        joda_version: ['$JODA_DEFAULT', '$JODA_MIN', '$JODA_MAX']
+        joda_version: [$JODA_DEFAULT, $JODA_MIN, $JODA_MAX]
         # indicate when SNAPSHOT publish to be done
         include:
           - java_version: '8'
-            joda_version: '$JODA_DEFAULT'
+            joda_version: $JODA_DEFAULT
             snapshot: 1
     env:
       JAVA_OPTS: "-XX:+TieredCompilation -XX:TieredStopAtLevel=1"
@@ -59,17 +59,17 @@ jobs:
       id: projectVersion
       run: echo "version=$(./mvnw org.apache.maven.plugins:maven-help-plugin:3.3.0:evaluate -DforceStdout -Dexpression=project.version -q)" >> $GITHUB_OUTPUT
     - name: Deploy snapshot
-      if: github.event_name != 'pull_request' && ${{ matrix.snapshot }} && endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT')
+      if: github.event_name != 'pull_request' && matrix.snapshot == 1 && endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT')
       env:
         CI_DEPLOY_USERNAME: ${{ secrets.CI_DEPLOY_USERNAME }}
         CI_DEPLOY_PASSWORD: ${{ secrets.CI_DEPLOY_PASSWORD }}
         # MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
       run: ./mvnw -B -q -ff -DskipTests -ntp source:jar deploy
     - name: Generate code coverage
-      if: github.event_name != 'pull_request' && ${{ matrix.snapshot }} && endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT')
+      if: github.event_name != 'pull_request' && matrix.snapshot == 1 && endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT')
       run: ./mvnw -B -q -ff -ntp test
     - name: Publish code coverage
-      if: github.event_name != 'pull_request' && ${{ matrix.snapshot }} && endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT')
+      if: github.event_name != 'pull_request' && matrix.snapshot == 1 && endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT')
       uses: codecov/codecov-action@v4
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
