[gradle-module-metadata-maven-plugin] update to version 1.0
Signed-off-by: Jendrik Johannes <jendrik.johannes@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
         <artifactId>moditect-maven-plugin</artifactId>
       </plugin>
       <plugin>
-        <groupId>de.jjohannes</groupId>
+        <groupId>org.gradlex</groupId>
         <artifactId>gradle-module-metadata-maven-plugin</artifactId>
       </plugin>
     </plugins>
